Feat/offer service offer managing (#204)
* feat: hotel offers management and paging utils
